add org.hibernate.type=TRACE to show jpa parameters

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.output.ansi.enabled= ALWAYS
 logging.level.root=WARN
 logging.level.com.example=DEBUG
+logging.level.org.hibernate.type=TRACE 
+#spring.datasource.url = jdbc:h2:tcp://localhost:9092/mem:testdb;MVCC=TRUE
